--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,26 @@
 <resources>
     <string name="app_name">Articles</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="description">Description</string>
+    <string name="title">Title</string>
+    <string name="search">Search</string>
+    <string name="priority_high">Priority High</string>
+    <string name="sort_by">Sort By</string>
+    <string name="priority_low">Priority Low</string>
+    <string name="delete_all">Delete All</string>
+    <string name="add">Add</string>
+    <string name="delete">Delete</string>
+    <string name="save">Save</string>
+    <string name="no_data">No Data</string>
+    <string name="todolist">ToDo List</string>
+    <string name="updatelist">Update Your ToDo</string>
+    <string name="addlist">Add New ToDo</string>
+    <string name="removeWarning">Are you sure you want to remove</string>
+    <string name="isDone">Done</string>
+    <string name="is_done">is Done</string>
+    <string name="is_not_done">is Not Done</string>
+    <string name="list">List</string>
+    <string name="linear">Linear</string>
+    <string name="grid">Grid</string>
+    <string name="undo">Undo</string>
+    <string name="deleted">Deleted</string>
 </resources>
